[gd_scene load_steps=2 format=3 uid="uid://cu31lfoey4oyn"]

[ext_resource type="Script" path="res://addons/htn_editor/EffectLayout.gd" id="1_qsjmp"]

[node name="EffectLayout" type="HBoxContainer"]
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_qsjmp")

[node name="Button" type="Button" parent="."]
layout_mode = 2
text = " - "

[node name="Key" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
placeholder_text = "key"
expand_to_text_length = true

[node name="Expr" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "expr"
expand_to_text_length = true

[connection signal="pressed" from="Button" to="." method="_on_delete_pressed"]
[connection signal="text_changed" from="Key" to="." method="_on_key_changed"]
[connection signal="text_changed" from="Expr" to="." method="_on_expr_changed"]
